<resources>
    <string name="app_name">Los Jardines</string>

    <!-- Text Buttom -->
    <string name="btn_txt_activity_register">REGISTRAR</string>
    <string name="btn_txt_activity_consultation">CONSULTAR</string>
    <string name="btn_txt_activity_products">PRODUCTOS</string>
    <string name="btn_txt_activity_reservation">RESERVAR</string>
    <string name="btn_txt_save">GUARDAR</string>
    <string name="btn_txt_consultation">CONSULTA</string>
    <string name="btn_txt_search">Buscar</string>
    <string name="btn_txt_clear">Limpiar</string>
    <string name="btn_txt_delete_register">Eliminar registro</string>
    <string name="btn_txt_update_data">Actualizar dato</string>

    <!-- Text Title, subtitle -->
    <string name="txt_room">N° habitacion *</string>
    <string name="txt_name">Apellidos y Nombres *</string>
    <string name="txt_dni">DNI *</string>
    <string name="txt_price">Precio *</string>
    <string name="txt_origin">Procedencia *</string>
    <string name="txt_observation">Observaciones</string>
    <string name="txt_date">Fecha *</string>
    <string name="txt_hour">Hora *</string>
    <string name="txt_filter">Filtro</string>
    <string name="txt_setting">Modificar precio de habitacion</string>
    <string name="txt_error_setting_empty">Es necesario rellenar todos los datos</string>
    <string name="txt_error_setting_room">Es necesario ingresar un numero de habitacion existente</string>
    <string name="txt_room_rv">N° habitacion</string>
    <string name="txt_date_rv">Fecha reserva</string>
    <string name="txt_date_enter_rv">Fecha de ingreso</string>
    <string name="txt_date_exit_rv">Fecha de salida</string>
    <string name="txt_number_night_rv">N° noches</string>
    <string name="txt_number_passenger_rv">N° pasajeros</string>
    <string name="txt_type_service">Tipo de habitacion/Servicio</string>
    <string name="txt_name_rv">Apellidos y Nombres</string>
    <string name="txt_dni_rv">DNI</string>
    <string name="txt_origin_rv">Nacionalidad</string>
    <string name="txt_fee_rv">Tarifa</string>
    <string name="txt_phone_email">Telefono de contacto/Correo electronico</string>
    <string name="txt_observation_rv">Observaciones</string>

    <!-- Text hint EditText -->
    <string name="txt_changed">Corregir dato</string>


    <!-- Text Dialog Box-->
    <string name="txt_state_succesfull">Tarea exitosa</string>
    <string name="txt_state_error">Ocurrio un problema</string>
    <string name="txt_state_not_available">Existe una reserva \n para esta habitacion</string>
    <string name="txt_state_sending">Enviando..</string>
    <string name="txt_state_update">Actualizando..</string>
    <string name="txt_state_delete">Eliminando..</string>
    <string name="txt_state_loading">Obteniendo datos..</string>

    <!-- Text toolBar -->
    <string name="txt_toolbar_title_c_clients">Historial de clientes</string>
    <string name="txt_toolbar_title_c_reservation">Historial de reservas</string>
    <string name="txt_toolbar_title_r_clients">Registro de cliente</string>
    <string name="txt_toolbar_title_r_reservation">Registro de reserva</string>
    <string name="txt_toolbar_title_products">Productos</string>
    <string name="txt_toolbar_title_statistics">Estadisticas</string>
    <string name="txt_toolbar_title_room">Habitaciones disponibles</string>

    <!-- Text Table -->
    <string name="txt_table_room">N° habitacion</string>
    <string name="txt_table_name">Apellidos y Nombres</string>
    <string name="txt_table_dni">DNI</string>
    <string name="txt_table_price">Precio</string>
    <string name="txt_table_origin">Procedencia</string>
    <string name="txt_table_observation">Observaciones</string>
    <string name="txt_table_date">Fecha</string>
    <string name="txt_table_hour">Hora</string>

    <string name="txt_table_room_rv">N° habitacion</string>
    <string name="txt_table_date_reservation_rv">Fecha \n reserva</string>
    <string name="txt_table_date_enter_rv">Fecha \n ingreso</string>
    <string name="txt_table_date_exit_rv">Fecha \n salida</string>
    <string name="txt_table_number_night_rv">N° noches</string>
    <string name="txt_table_number_passenger_rv">N° pasajeros</string>
    <string name="txt_table_type_service">Tipo de habitacion\n/Servicio</string>
    <string name="txt_table_name_rv">Apellidos y Nombres</string>
    <string name="txt_table_dni_rv">DNI</string>
    <string name="txt_table_origin_rv">Nacionalidad</string>
    <string name="txt_table_fee_rv">Tarifa</string>
    <string name="txt_table_phone_email">N° de contacto/\nCorreo electronico</string>
    <string name="txt_table_observation_rv">Observaciones</string>


</resources>