<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.ConsultationActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_default"
        android:minHeight="?actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/custom_consultation"
        app:navigationIcon="@drawable/icon_back"
        app:title="@string/txt_toolbar_return"
        app:titleTextColor="@color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/logo_hotel"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif"
                android:text="@string/txt_filter"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner_filter"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:minHeight="48dp" />

            <LinearLayout
                android:id="@+id/layout_filter_filler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:visibility="gone">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="0dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="MissingConstraints">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/description_filter"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        tools:ignore="SpeakableTextPresentCheck" />
                </com.google.android.material.textfield.TextInputLayout>

                <Spinner
                    android:id="@+id/spinner_months"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="100dp"
                    android:minHeight="48dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_btn_option"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:visibility="gone">

                <Button
                    android:id="@+id/btnSearch"
                    style="@style/ShapeAppearanceOverlay.Material3.Button"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/btn_txt_search"
                    app:cornerRadius="8sp"
                    app:icon="@drawable/icon_search"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/btnClear"
                    style="@style/ShapeAppearanceOverlay.Material3.Button"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:text="@string/btn_txt_clear"
                    app:cornerRadius="8sp"
                    app:icon="@drawable/icon_clear" />
            </LinearLayout>

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tabla"
                    tools:ignore="RtlSymmetry">

                    <LinearLayout
                        android:id="@+id/table"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/txtRoom"
                            android:layout_width="120dp"
                            android:layout_height="50dp"
                            android:background="@drawable/background_table_register"
                            android:gravity="center"
                            android:text="@string/txt_table_room"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toStartOf="@+id/txtHora"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/txtHour"
                            android:layout_width="100dp"
                            android:layout_height="50dp"
                            android:background="@drawable/background_table_register"
                            android:gravity="center"
                            android:text="@string/txt_table_hour"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            app:layout_constraintStart_toEndOf="@+id/txtHabitacion"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/txtDate"
                            android:layout_width="100dp"
                            android:layout_height="50dp"
                            android:background="@drawable/background_table_register"
                            android:gravity="center"
                            android:text="@string/txt_table_date"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            app:layout_constraintStart_toEndOf="@+id/txtHora"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/txtName"
                            android:layout_width="174dp"
                            android:layout_height="50dp"
                            android:background="@drawable/background_table_register"
                            android:gravity="center"
                            android:text="@string/txt_table_name"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            app:layout_constraintStart_toEndOf="@+id/txtFecha"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/txtDni"
                            android:layout_width="100dp"
                            android:layout_height="50dp"
                            android:background="@drawable/background_table_register"
                            android:gravity="center"
                            android:text="@string/txt_table_dni"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            app:layout_constraintStart_toEndOf="@+id/txtApellidos"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/txtOrigin"
                            android:layout_width="100dp"
                            android:layout_height="50dp"
                            android:background="@drawable/background_table_register"
                            android:gravity="center"
                            android:text="@string/txt_table_origin"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            app:layout_constraintStart_toEndOf="@+id/txtDni"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/txtPrice"
                            android:layout_width="100dp"
                            android:layout_height="50dp"
                            android:background="@drawable/background_table_register"
                            android:gravity="center"
                            android:text="@string/txt_table_price"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            app:layout_constraintStart_toEndOf="@+id/txtProcedencia"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/txtObservation"
                            android:layout_width="186dp"
                            android:layout_height="50dp"
                            android:background="@drawable/background_table_register"
                            android:gravity="center"
                            android:text="@string/txt_table_observation"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toEndOf="@+id/txtPrecio"
                            app:layout_constraintTop_toTopOf="parent" />

                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycleView_table"
                        android:layout_width="wrap_content"
                        android:layout_height="300dp"
                        android:layout_marginStart="20dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/table" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </HorizontalScrollView>

        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>